UX fixes on iphone

--- a/client/FinanceTrackerClient/src/app/components/account-list/account-list.scss
+++ b/client/FinanceTrackerClient/src/app/components/account-list/account-list.scss
@@ -258,7 +258,7 @@ mat-drawer-content {
 }
 
 .drawer-content-wrapper {
-  padding: 2.5rem 2rem;
+  padding: 3rem 2rem;
   display: flex;
   flex-direction: column;
   height: 100%;
